[gd_scene load_steps=8 format=3 uid="uid://d0a2hpaex46gj"]

[ext_resource type="Script" uid="uid://ddhmgh5paca6m" path="res://tool/canvas_prompt_manager.gd" id="1_wilto"]
[ext_resource type="PackedScene" uid="uid://bnmc02p3i33q2" path="res://tool/formula_prompt.tscn" id="2_5jmky"]
[ext_resource type="PackedScene" uid="uid://d2n4g00qw1ua" path="res://tool/context_menu.tscn" id="3_sbbhr"]
[ext_resource type="Script" uid="uid://ca8frkyxoem7n" path="res://tool/canvas_label_prompt.gd" id="4_6aihm"]
[ext_resource type="PackedScene" uid="uid://1vmwbqdssvhd" path="res://tool/attribute_prompt.tscn" id="5_knsmr"]
[ext_resource type="PackedScene" uid="uid://vqxepyllje5n" path="res://tool/issues_prompt.tscn" id="6_5lxgt"]
[ext_resource type="Script" uid="uid://doi8fk3cpuhrs" path="res://tool/issue_prompt.gd" id="7_cxm72"]

[node name="CanvasPromptManager" type="Node"]
script = ExtResource("1_wilto")

[node name="FormulaPrompt" parent="." instance=ExtResource("2_5jmky")]
visible = false

[node name="ContextMenu" parent="." instance=ExtResource("3_sbbhr")]
visible = false

[node name="LabelPrompt" type="LineEdit" parent="."]
visible = false
offset_right = 118.0
offset_bottom = 30.0
alignment = 1
script = ExtResource("4_6aihm")
metadata/_custom_type_script = "uid://ca8frkyxoem7n"

[node name="AttributePrompt" parent="." instance=ExtResource("5_knsmr")]
visible = false

[node name="IssuePrompt" parent="." instance=ExtResource("6_5lxgt")]
visible = false
custom_minimum_size = Vector2(500, 32)
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 700.0
offset_bottom = 56.0
grow_horizontal = 1
grow_vertical = 1
script = ExtResource("7_cxm72")
